--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <main class="bg-white w-4/5 mx-auto my-40 flex flex-col justify-center items-center lg:flex-row lg:justify-around opacity-50">
         <img class="w-1/5 lg:w-1/3" src="./image/logo-tailwind.png" alt="Logo Tailwind CSS">
-        <h1 class="font-black text-2xl text-center lg:text-5xl">Olá Tailwind CSS!</h1>
+        <h1 class="font-black text-2xl text-center lg:text-5xl">Olá Tailwind</h1>
         <img class="w-1/5 lg:w-1/3" src="./image/logo-tailwind.png" alt="Logo Tailwind CSS">
     </main>
 
